--- a/Cargo.toml
+++ b/Cargo.toml
@@ -9,3 +9,4 @@ azalea = "0.1"
 prometheus = "0.12"
 reqwest = { version = "0.11", features = ["json"] }
 serde = { version = "1.0", features = ["derive"] }
+tokio = { version = "1", features = ["full"] }
