--- a/Cargo.toml
+++ b/Cargo.toml
@@ -10,3 +10,5 @@ prometheus = "0.12"
 reqwest = { version = "0.11", features = ["json"] }
 serde = { version = "1.0", features = ["derive"] }
 tokio = { version = "1", features = ["full"] }
+warp = "0.3"
+toml = "0.5"
