Install Rust and Cargo
Add instructions to install Rust and Cargo.

* **README.md**
  * Add instructions to install Rust and Cargo.
* **.devcontainer/devcontainer.json**
  * Add postCreateCommand to install Rust and Cargo in the devcontainer setup.
* **.github/workflows/rust.yml**
  * Add step to install Rust and Cargo in the GitHub Actions workflow.
* **src/errors.rs**
  * Add custom error type `PluginError` with `Config` and `Bot` variants.
  * Implement `fmt::Display` and `std::error::Error` for `PluginError`.
* **src/metrics.rs**
  * Replace `Plugin` struct with `Metrics` struct.
  * Add `player_count`, `tps`, and `latency` fields to `Metrics`.
  * Implement `Metrics::new` and `Metrics::update` methods.
* **src/plugin.rs**
  * Add `logger` field to `Plugin` struct.
  * Update `Plugin::new` to accept `logger` parameter.
  * Update `on_player_join`, `on_player_leave`, and `on_chat_message` methods to use `self.logger.send_log`.
* **tests/main.rs**
  * Update configuration loading method.
  * Replace individual metric initialization with `Metrics::new`.
  * Update Prometheus metrics endpoint setup.
  * Update Loki logging endpoint setup.
  * Update server start command to use `config.metrics_port`.

--- a/.devcontainer/devcontainer.json
+++ b/.devcontainer/devcontainer.json
@@ -3,5 +3,6 @@
     "test": "cargo test",
     "build": "cargo build",
     "launch": "cargo run"
-  }
+  },
+  "postCreateCommand": "curl --proto '=https' --tlsv1.2 -sSf https://sh.rustup.rs | sh -s -- -y && source $HOME/.cargo/env"
 }
